# statements-to-books

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postStart.sh
.github/workflows/: docker_linter.yml
python/bank_to_books/: hello.py
python/statements_to_books/: pdf_parser.py
src/: io_utils.rs  main.rs  parse_utils.rs  pyo3_pdf_service.rs
