[project]
name = "statements-to-books"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.1.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "statements_to_books._lib_name"

[dependency-groups]
dev = [
    "maturin>=1.8.1",
]

[tool.uv]
package = false
